sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:9: error: type mismatch;
 found   : Int
 required: String
    playersColor += getPlayerColor(i, 0)
                                  ^NaiveBaseball:10: error: type mismatch;
 found   : Int
 required: String
    playersColor += getPlayerColor(i, 1)
                                  ^